Commit #9 New component added CodeEditor is display:none on mobile Fixed width 300px for video element You can now make fullscreen for stream video

--- a/src/components/Messages/Messages.css
+++ b/src/components/Messages/Messages.css
@@ -13,5 +13,6 @@
 @media (orientation: portrait) {
     .messages {
         height: 90vmin;
+        margin: auto;
     }
 }
