--- a/src/components/Room/Room.css
+++ b/src/components/Room/Room.css
@@ -30,4 +30,12 @@
     .room {
         flex-direction: column;
     }
+
+    .code-editor {
+        display: none;
+    }
+
+    .room__welcome-block {
+        margin: 20px;
+    }
 }
