--- a/src/components/Stream/Stream.css
+++ b/src/components/Stream/Stream.css
@@ -54,3 +54,9 @@
     color: #0B82FE;
     cursor: pointer;
 }
+
+@media (max-width: 600px) {
+    .streaming {
+        align-self: center;
+    }
+}
